Replaced utility functions for collections by standard functions